# Abasoli-Blog

./: .gitignore  config.py  pyproject.toml
abasoli_blog/: app.py
abasoli_blog/blueprints/models/: __init__.py  base_model.py  user_model.py
abasoli_blog/ext/: configuration.py  cors.py  database.py
abasoli_blog/utils/: path_handler.py  singleton.py
migrations/versions/: adf5ff5347ed_user_model_definition.py
tests/: test_abasoli_blog.py
