[tool.poetry]
name = "abasoli-blog"
version = "0.1.0"
description = ""
authors = ["Vinicius Abade <vinicius@kenzie.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
environs = "^9.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
