[tool.poetry]
name = "abasoli-blog"
version = "0.1.0"
description = ""
authors = ["Vinicius Abade <canalabade@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
environs = "^9.3.2"
dynaconf = "^3.1.4"
Flask-SQLAlchemy = "^2.5.1"
Flask-Cors = "^3.0.10"
Flask-Migrate = "^2.7.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
